# confu_soci

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt
confu_soci/: CMakeLists.txt  concept.hxx  convenienceFunctionForSoci.cxx  convenienceFunctionForSoci.hxx
convenienceFunctionForSoci/: CMakeLists.txt  convenienceFunctionForSoci.hxx
test/: CMakeLists.txt  constant.hxx  test.cxx  testHelper.cxx  testHelper.hxx
test_data/: test_db
