cmake_minimum_required(VERSION 3.27)
project(project VERSION 1.0.0
        DESCRIPTION project
        LANGUAGES CXX
        )
include(cmake/Cache.cmake)
find_package(Boost REQUIRED)
find_package(SOCI REQUIRED)
find_package(magic_enum REQUIRED)
add_library(project_warning INTERFACE)
include(cmake/CompilerWarnings.cmake)
set_project_warnings(project_warning)
add_library(project_options INTERFACE)
target_compile_features(project_options INTERFACE cxx_std_20)
include(cmake/StaticAnalyzers.cmake)
include(cmake/Sanitizers.cmake)
enable_sanitizers(project_options)
add_subdirectory(confu_soci)
OPTION(BUILD_TESTS "enable tests" OFF)
IF (BUILD_TESTS)
  enable_testing()
  add_subdirectory(test)
ENDIF (BUILD_TESTS)
