cmake_minimum_required(VERSION 3.15.7)
project(project VERSION 1.0.0
        DESCRIPTION project
        LANGUAGES CXX
        )
include(cmake/Cache.cmake)
set(PROJECT_WARNINGS project_warning)
add_library(${PROJECT_WARNINGS} INTERFACE)
include(cmake/CompilerWarnings.cmake)
set_project_warnings(${PROJECT_WARNINGS})
set(PROJECT_OPTIONS project_options)
add_library(${PROJECT_OPTIONS} INTERFACE)
include(cmake/StaticAnalyzers.cmake)
include(cmake/Sanitizers.cmake)
enable_sanitizers(${PROJECT_OPTIONS})
add_subdirectory(confu_soci)
OPTION(BUILD_TESTS "enable tests" OFF)
IF (BUILD_TESTS)
  enable_testing()
  add_subdirectory(test)
ENDIF (BUILD_TESTS)
